kubernetes/001-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-lens-service-python
  labels:
    name: external-lens-service-python
spec:
  selector:
    app: external-lens-service-python
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
